--- a/report/sections/implementations.tex
+++ b/report/sections/implementations.tex
@@ -1,9 +1,4 @@
-\begin{mdframed}
-    \textbf{La extensión máxima para esta sección es de 1 página.}
-\end{mdframed}
-
-
-Sólo agregar la url del repositorio de GitHub donde se encuentra el código fuente de la tarea. Recordar que el repositorio \textbf{debe ser privado}, ya que de lo contrario cualquier persona podrá acceder a su código y cometer plagio, siendo usted responsable de ello. 
+Las implementaciones de todos los codigos descritos en el infrme estaran presentes en sigueinte repositorio de GitHub, asi como  los archivos que ejecutaran todos los casos de prueba (sorting.cpp y matrixMmultiplioation.cpp)
 
 \begin{mdframed}
     \begin{center}
