--- a/report/sections/conclusions.tex
+++ b/report/sections/conclusions.tex
@@ -1,13 +1,9 @@
-\begin{mdframed}
-    \textbf{La extensión máxima para esta sección es de 1 página.}
-\end{mdframed}
+En este trabajo se llevó a cabo una evaluación experimental de cinco algoritmos clásicos —tres de ordenamiento (SelectionSort, MergeSort y QuickSort, junto con la implementación de \texttt{std::sort}) y dos de multiplicación de matrices (Naive y Strassen)— sobre diversos tipos de entrada y tamaños crecientes. El objetivo planteado en la introducción—cuantificar la brecha entre complejidad teórica y rendimiento real bajo condiciones controladas—se ha alcanzado satisfactoriamente mediante la obtención de mediciones reproducibles y un análisis comparativo detallado.
 
-La conclusión de su informe debe enfocarse en el resultado más importante de su trabajo. No se trata de repetir los puntos ya mencionados en el cuerpo del informe, sino de interpretar sus hallazgos desde un nivel más abstracto. En lugar de describir nuevamente lo que hizo, muestre cómo sus resultados responden a la necesidad planteada en la introducción.
+Para los algoritmos de ordenamiento, los resultados confirman la penalización dramática del enfoque cuadrático de SelectionSort frente a las curvas O(\(n\log n\)) de MergeSort, QuickSort y \texttt{std::sort}. En todos los escenarios (aleatorio, ascendente y descendente) SelectionSort se vuelve inviable a partir de \(n\approx10^5\), mientras que MergeSort y QuickSort mantienen tiempos moderados incluso para \(n=10^7\), destacando la robustez de \texttt{std::sort} como la opción más eficiente en promedio
 
-\begin{itemize}
-    \item  No vuelva a describir lo que ya explicó en el desarrollo del informe. En cambio, interprete sus resultados a un nivel superior, mostrando su relevancia y significado.
-    \item Aunque no debe repetir la introducción, la conclusión debe mostrar hasta qué punto logró abordar el problema o necesidad planteada en el inicio. Reflexione sobre el éxito de su análisis o experimento en relación con los objetivos propuestos.
-    \item No es necesario restablecer todo lo que hizo (ya lo ha explicado en las secciones anteriores). En su lugar, centre la conclusión en lo que significan sus resultados y cómo contribuyen al entendimiento del problema o tema abordado.
-    \item No deben centrarse en sí mismos o en lo que hicieron durante el trabajo (por ejemplo, evitando frases como "primero hicimos esto, luego esto otro...").
-    \item Lo más importante es que no se incluyan conclusiones que no se deriven directamente de los resultados obtenidos. Cada afirmación en la conclusión debe estar respaldada por el análisis o los datos presentados. Se debe evitar extraer conclusiones generales o excesivamente amplias que no puedan justificarse con los experimentos realizados.
-\end{itemize}
+Respecto a la multiplicación de matrices, el método Naive exhibe el crecimiento cúbico esperado, superando los 6 400 ms para \(n=1024\), mientras que Strassen logra ventajas marginales alrededor de \(n=256\), pero ve reducida su eficacia práctica en grandes dimensiones debido al overhead recursivo y al coste de memoria adicional. Al explorar matrices diagonales y dispersas, se confirmó que la escasez de elementos no nulos acelera ambos algoritmos en rangos pequeños (\(n\le64\)), aunque a partir de \(n\ge256\) las mejoras teóricas quedan amortiguadas por el coste de acceso y verificación de ubicaciones nulas.
+
+En conjunto, estos hallazgos ponen de manifiesto que la elección de algoritmo debe basarse no solo en su orden de complejidad asintótica, sino también en características prácticas del hardware (cache, gestión de memoria) y del patrón de datos. Para aplicaciones con matrices de gran tamaño, una implementación híbrida o bloqueada que combine lo mejor de Naive y Strassen, o el uso de bibliotecas optimizadas, podría ofrecer ventajas adicionales.
+
+Finalmente, los resultados alcanzados responden al planteamiento inicial al demostrar que las discrepancias entre teoría y práctica son sustanciales: la sobrecarga de gestión de memoria y recursividad puede anular las ganancias teóricas en escenarios reales, y solo un análisis experimental riguroso permite identificar la opción óptima en cada contexto. Como trabajo futuro, se sugiere analizar variantes paralelas y basadas en BLAS para extender la validez de estas conclusiones a entornos de alto rendimiento.
