--- a/report/sections/experiment_intro.tex
+++ b/report/sections/experiment_intro.tex
@@ -1,8 +1,12 @@
-\begin{mdframed}
-    \textbf{La extensión máxima para esta sección es de 7 páginas, donde una página es para introducir los experimentos (breve descripción y comentarios sobre los datasets) y 6 páginas para los resultados.}
-\end{mdframed}
+Para asegurar la reproducibilidad de los experimentos y con el fin de que otros puedan verificar y extender estos resultados,se detalla a continuación la infraestructura utilizada.\\
 
+El hardware consiste en:
 
-\epigraph{``\textit{Non-reproducible single occurrences are of no significance to
-science.}''}{---\citeauthor{popper2005logic},\citeyear{popper2005logic} \cite{popper2005logic}}
-En la sección de Experimentos, es fundamental detallar la infraestructura utilizada para asegurar la reproducibilidad de los resultados, un principio clave en cualquier experimento científico. Esto implica especificar tanto el hardware (por ejemplo, procesador Intel Core i7-9700K, 3.6 GHz, 16 GB RAM DDR4, almacenamiento SSD NVMe) como el entorno software (sistema operativo Ubuntu 20.04 LTS, compilador g++ 9.3.0, y cualquier librería relevante). Además, se debe incluir una descripción clara de las condiciones de entrada, los parámetros utilizados y los resultados obtenidos, tales como tiempos de ejecución y consumo de memoria, que permitan a otros replicar los experimentos en entornos similares. \textit{La replicabilidad es un aspecto crítico para validar los resultados en la investigación científica computacional} \cite{inbookFonseca}.
+- un procesador Apple M1,
+
+- 8 GB de memoria RAM 
+
+- almacenamiento en SSD NVMe.
+\\
+
+El entorno software corresponde a MacOS 15.4.1 Sequoia, compilador \texttt{c++17}, y las librerías estándar de C++ junto con el módulo \texttt{<chrono>} para la toma de tiempos. Todos los scripts de generación de datos y de gráficas fueron escritos en Python 3.8, empleando \texttt{matplotlib} y automatizados mediante un \texttt{Makefile}.
