--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,26 +1,12 @@
-\begin{mdframed}
-    \textbf{La extensión máxima para esta sección es de 1 página.}
-\end{mdframed}
+El presente informe se enmarca en el campo del Análisis y Diseño de Algoritmos en Ciencias de la Computación, destacando la importancia de evaluar la eficiencia y complejidad de diferentes métodos en contextos reales \cite{GoodScientificPaper}. Con ello se busca contextualizar el problema y establecer los antecedentes necesarios para comprender la relevancia de comparar técnicas que, si bien cuentan con fundamentos teóricos sólidos, presentan comportamientos distintos en la práctica, ya que factores como el acceso a memoria y las características del hardware pueden influir significativamente en su rendimiento.\\
 
-La introducción de este tipo de informes o reportes, tiene como objetivo principal \textbf{contextualizar el problema que se va a analizar}, proporcionando al lector la información necesaria para entender la relevancia del mismo. 
+A pesar del amplio conocimiento que existe sobre algoritmos de ordenamiento y multiplicación de matrices, persiste la necesidad de evaluar comparativamente técnicas de distinto coste computacional bajo condiciones experimentales controladas.En este trabajo concretamente se evaluaran experimentalmente dos grupos de algoritmos:
+\begin{itemize} \item \textbf{Algoritmos de Ordenamiento:} Selection Sort, Mergesort y Quicksort.
+\item \textbf{Algoritmos de Multiplicación de Matrices:} Naive y Strassen. \end{itemize}
 
-Es fundamental que en esta sección se presenten los antecedentes del problema, destacando investigaciones previas o principios teóricos que sirvan como base para los análisis posteriores. Además, deben explicarse los objetivos del informe, que pueden incluir la evaluación de un algoritmo, la comparación de métodos o la validación de resultados experimentales.
+Se conoce que \textbf{SelectionSort} opera con una complejidad $O(n^2)$, lo que lo hace ineficiente para grandes volúmenes de datos. Por otro lado, \textbf{Mergesort} ofrece una complejidad de 
+$O(nlogn)$ a costa de una mayor complejidad en su implementación,y \textbf{Quicksort}, aunque generalmente resulta muy eficiente con una complejidad promedio de $O(nlogn)$, puede presentar una complejidad de $O(n^2)$ en su peor caso debido a una mala elección del pivote. En lo que respecta a la multiplicación de matrices, el método tradicional (Naive) tiene una complejidad de
+$O(n^3)$, mientras el algoritmo de Strassen reduce la complejidad teórica a aproximadamente
+$O(n^{2.81}).$\\
 
-Aunque la estructura y el enfoque siguen principios de trabajos académicos, se debe recordar que estos informes no son publicaciones científicas formales, sino trabajos de pregrado. Por lo tanto, se busca un enfoque claro y directo, que permita al lector comprender la naturaleza del problema y los objetivos del análisis, sin entrar en detalles excesivos. 
-
-
-Introduction Checklist de \citetitle{GoodScientificPaper} \cite{GoodScientificPaper}, adaptada a nuestro contexto:
-
-\begin{itemize}
-\item Indique el \textbf{campo del trabajo} (Análisis y Diseño de algoritmos en Ciencias de la Computación), por qué este campo es importante y qué se ha hecho ya en este área, con las \textbf{citas} adecuadas de la literatura académica o fuentes relevantes.
-\item Identifique una \textbf{brecha} en el conocimiento, un desafío práctico, o plantee una \textbf{pregunta} relacionada con la eficiencia, complejidad o aplicabilidad de un algoritmo particular.
-\item Resuma el propósito del informe e introduzca el análisis o experimento, dejando claro qué se está investigando o comparando, e indique \textbf{qué es novedoso} o por qué es significativo en el contexto de un curso de pregrado.
-\item Evite; repetir el resumen; proporcionar información innecesaria o fuera del alcance de la materia (limítese al análisis de algoritmos o conceptos de complejidad); exagerar la importancia del trabajo (recuerde que se trata de un informe de pregrado); afirmar novedad sin una comparación adecuada con lo enseñado en clase o la bibliografía recomendada.
-\end{itemize}
-
-
-
-\begin{mdframed}
-Recuerde que este es su trabajo, y sólo usted puede expresar con precisión lo que ha aprendido y quiere transmitir. Si lo hace bien, su introducción será más significativa y valiosa que cualquier texto automatizado. ¡Confíe en sus habilidades, y verá que puede hacer un mejor trabajo que cualquier herramienta que automatiza la generación de texto!
-\end{mdframed}
-
+El propósito de este informe es realizar una evaluación experimental de los cinco algoritmos, midiendo su tiempo de ejecución en diversos escenarios de datos: aleatorios, parcialmente ordenados y en el caso de matrices, de tamaños crecientes. Para ello, se implementaron manualmente todos los algoritmos en C++ y se utilizó la biblioteca \texttt{<chrono>} para obtener mediciones precisas de los tiempos de ejecucion de cada algoritmo. De este modo, se busca identificar las diferencias entre la complejidad teórica y el desempeño real, así como destacar las ventajas y limitaciones de cada enfoque.
