--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -9,4 +9,4 @@ $O(nlogn)$ a costa de una mayor complejidad en su implementación,y \textbf{Quic
 $O(n^3)$, mientras el algoritmo de Strassen reduce la complejidad teórica a aproximadamente
 $O(n^{2.81}).$\\
 
-El propósito de este informe es realizar una evaluación experimental de los cinco algoritmos, midiendo su tiempo de ejecución en diversos escenarios de datos: aleatorios, parcialmente ordenados y en el caso de matrices, de tamaños crecientes. Para ello, se implementaron manualmente todos los algoritmos en C++ y se utilizó la biblioteca \texttt{<chrono>} para obtener mediciones precisas de los tiempos de ejecucion de cada algoritmo. De este modo, se busca identificar las diferencias entre la complejidad teórica y el desempeño real, así como destacar las ventajas y limitaciones de cada enfoque.
+El propósito de este informe es realizar una evaluación experimental de los cinco algoritmos, midiendo su tiempo de ejecución en diversos escenarios de datos: aleatorios,Ordenados Ascendente y descendentemente para el ordenamiento. y en el caso de la multipliacion matrices, se pusieron a prueba los algoritmos con matrices Densas diagonales y dispersas. Para ello, se implementaron manualmente todos los algoritmos en C++ y se utilizó la biblioteca \texttt{<chrono>} para obtener mediciones precisas de los tiempos de ejecucion de cada algoritmo. De este modo, se busca identificar las diferencias entre la complejidad teórica y el desempeño real, así como destacar las ventajas y limitaciones de cada enfoque.
